apps/cilium-gateway/gateway/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cilium-gateway-system
  labels:
    name: cilium-gateway-system
