apps/cilium-gateway/gateway/base/reference-grant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: cert-manager-to-gateway
  namespace: cert-manager
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: cilium-gateway-system
  to:
    - group: ''
      kind: Secret
